--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
-        "apollo-boost": "^0.4.9",
+        "@apollo/client": "^3.5.8",
+        "@vue/apollo-composable": "^4.0.0-alpha.16",
+        "@vue/apollo-option": "^4.0.0-alpha.16",
+        "@vue/composition-api": "^1.4.6",
+        "chart.js": "^3.7.0",
         "graphql": "^16.3.0",
+        "graphql-tag": "^2.12.6",
         "vue": "^3.2.29",
-        "vue-apollo": "^3.1.0"
+        "vue-chartjs": "^3.5.1"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.1.0",
