test chart setup

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "chart.js": "^3.7.0",
         "graphql": "^16.3.0",
         "graphql-tag": "^2.12.6",
-        "vue": "^3.2.29",
-        "vue-chartjs": "^3.5.1"
+        "vue": "^3.2.29"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.1.0",
