--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "chart.js": "^3.7.0",
         "graphql": "^16.3.0",
         "graphql-tag": "^2.12.6",
+        "moment": "^2.29.1",
         "vue": "^3.2.29"
     },
     "devDependencies": {
