--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
         "graphql": "^16.3.0",
         "graphql-tag": "^2.12.6",
         "moment": "^2.29.1",
-        "vue": "^3.2.29"
+        "vue": "^3.2.29",
+        "vue-material": "^1.0.0-beta-15",
+        "vue3-date-time-picker": "^2.5.0"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.1.0",
+        "autoprefixer": "^10.4.2",
         "eslint": "^8.5.0",
         "eslint-plugin-vue": "^8.2.0",
+        "postcss": "^8.4.6",
+        "tailwindcss": "^3.0.19",
         "vite": "^2.7.13"
     }
 }
